--- a/server/src/main/resources/password/pwm/i18n/Display_da.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_da.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Send e-mail
 Button_Export=Eksport\u00e9r
 Button_ExportOrgChart=Eksport\u00e9r organisationsdiagram
+Button_EmailTeam=Send en e-mail til teammedlemmer
 Button_TokenVerification=Tokenbekr\u00e6ftelse
 Button_SendToken=Send token
 Display_ActivateUser=Angiv f\u00f8lgende oplysninger for at bekr\u00e6fte din identitet. Dine oplysninger bruges til at lokalisere og aktivere din brugerkonto.<p/>S\u00f8rg for at gennemf\u00f8re processen, ellers aktiveres din konto ikke korrekt.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=Der sendes en sikkerhedskode til dig for at bekr
 Display_RecoverTokenSendOneChoice=En sikkerhedskode sendes til dig p\u00e5 %1% for at f\u00e5 bekr\u00e6ftet din identitet.
 Display_RecoverTokenSendChoiceEmail=Send koden til din registrerede e-mailadresse.
 Display_RecoverTokenSendChoiceSMS=Send koden til din mobiltelefon via sms.
-Display_RecoverTokenSuccess=Tak! Din sikkerhedskode, der er sendt til <b>%1%</b>, er blevet bekr\u00e6ftet.
+Display_RecoverTokenSuccess=Tak\! Din sikkerhedskode, der blev sendt til <b>%1%</b>, er blevet bekr\u00e6ftet.
 Display_RecoverChoiceReset=Angiv en ny adgangskode. Hvis du har glemt adgangskoden og gerne vil angive en ny, skal du klikke her. Din konto l\u00e5ses op, n\u00e5r du angiver en ny adgangskode.
 Display_RecoverChoiceResetInhibit=Din adgangskode kan ikke \u00e6ndres p\u00e5 nuv\u00e6rende tidspunkt, da du er inden for minimumgr\u00e6nsen for adgangskodens levetid.
 Display_RecoverChoiceUnlock=L\u00e5s din konto op. Hvis du kan huske din adgangskode, kan du l\u00e5se din konto op ved at v\u00e6lge denne indstilling. Adgangskoden \u00e6ndres ikke.
@@ -358,7 +359,7 @@ Value_Default=Standard
 Value_ProgressComplete=Udf\u00f8rt
 Value_ProgressInProgress=I gang
 Placeholder_Search=S\u00f8g
-Instructions_ExportOrgChart1=Klik p\u00e5 knappen Eksport\u00e9r for at begynde download af data fra organisationsdiagrammet. N\u00e5r du er f\u00e6rdig med at downloade, kan du importere disse data i et program som f.eks. Visio, s\u00e5 de kan formateres til det \u00f8nskede output.
+Instructions_ExportOrgChart1=Klik p\u00e5 knappen Export\u00e9r for at begynde at downloade organisationsdiagramdata. N\u00e5r download er fuldf\u00f8rt, kan du bruge dataene til at importere disse organisationsdiagramdata til et valgfrit program. Dataene eksporteres i CSV-format.
 Instructions_ExportOrgChart2=V\u00e6lg dybden af eksportniveauet, og tryk p\u00e5 knappen Eksport\u00e9r nedenfor.
 Instructions_EmailTeam1=E-maillisten oprettes p\u00e5 baggrund af organisationsdata fra og med dette punkt. N\u00e5r du klikker p\u00e5 knappen Send e-mail, \u00e5bnes dit standard-e-mailprogram automatisk, og listen over e-mailadresser er udfyldt p\u00e5 forh\u00e5nd.
 Instructions_EmailTeam2=V\u00e6lg dybden af teamniveauet, og tryk p\u00e5 knappen E-mail nedenfor.
