--- a/server/src/main/resources/password/pwm/i18n/Display_de.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_de.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Email senden
 Button_Export=Exportieren
 Button_ExportOrgChart=Organigramm exportieren
+Button_EmailTeam=Email an Teammitglieder
 Button_TokenVerification=Token-\u00dcberpr\u00fcfung
 Button_SendToken=Token senden
 Display_ActivateUser=Geben Sie die folgenden Informationen ein, um Ihre Identit\u00e4t zu best\u00e4tigen. Anhand dieser Informationen wird Ihr Benutzerkonto ermittelt und aktiviert.<p/>Schlie\u00dfen Sie den Vorgang vollst\u00e4ndig ab, damit Ihr Konto ordnungsgem\u00e4\u00df aktiviert werden kann.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t w
 Display_RecoverTokenSendOneChoice=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wird Ihnen ein Sicherheitscode an %1% gesendet.
 Display_RecoverTokenSendChoiceEmail=Code an die registrierte Email-Adresse senden.
 Display_RecoverTokenSendChoiceSMS=Code in einer Textnachricht (SMS) an das Mobiltelefon senden.
-Display_RecoverTokenSuccess=Vielen Dank! Ihr an <b>%1%</b> gesendeter Sicherheitscode wurde \u00fcberpr\u00fcft.
+Display_RecoverTokenSuccess=Vielen Dank\! Ihr an <b>%1%</b> gesendeter Sicherheitscode wurde \u00fcberpr\u00fcft.
 Display_RecoverChoiceReset=Legen Sie ein neues Passwort fest. Falls Sie Ihr Passwort vergessen haben und ein neues Passwort festlegen m\u00f6chten, klicken Sie hier. Ihr Konto wird auch entsperrt, wenn Sie ein neues Passwort festlegen.
 Display_RecoverChoiceResetInhibit=Das Passwort kann zurzeit nicht ge\u00e4ndert werden, weil die minimale G\u00fcltigkeitsdauer des Passworts noch nicht erreicht wurde.
 Display_RecoverChoiceUnlock=Entsperren Sie Ihr Konto. Wenn Sie sich an Ihr Passwort erinnern, k\u00f6nnen Sie das Konto durch Auswahl dieser Option entsperren. Das Passwort wird nicht ge\u00e4ndert.
@@ -358,7 +359,7 @@ Value_Default=Standard
 Value_ProgressComplete=Abgeschlossen
 Value_ProgressInProgress=In Bearbeitung
 Placeholder_Search=Suchen
-Instructions_ExportOrgChart1=Klicken Sie auf die Schaltfl\u00e4che 'Exportieren', um mit dem Herunterladen der Organigrammdaten zu beginnen. Nach Abschluss des Herunterladens k\u00f6nnen Sie die Daten in ein Programm wie Visio importieren und wie gew\u00fcnscht f\u00fcr die Ausgabe formatieren.
+Instructions_ExportOrgChart1=Klicken Sie auf die Schaltfl\u00e4che 'Exportieren', um mit dem Herunterladen der Organigrammdaten zu beginnen. Nachdem das Herunterladen abgeschlossen ist, k\u00f6nnen Sie die Organigrammdaten in ein Programm Ihrer Wahl importieren. Die Daten werden im CSV-Format exportiert.
 Instructions_ExportOrgChart2=W\u00e4hlen Sie die Exporttiefe und klicken Sie unten auf die Schaltfl\u00e4che 'Exportieren'.
 Instructions_EmailTeam1=Die Email-Liste wird basierend auf Organigrammdaten ab diesem Punkt generiert. Wenn Sie auf die Schaltfl\u00e4che 'Email senden' klicken, wird das standardm\u00e4\u00dfige Email-Programm ge\u00f6ffnet und das Email-Adressfeld automatisch mit der Liste ausgef\u00fcllt.
 Instructions_EmailTeam2=W\u00e4hlen Sie die Teamebenentiefe und klicken Sie unten auf die Schaltfl\u00e4che 'Email'.
