--- a/server/src/main/resources/password/pwm/i18n/Display_es.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_es.properties
@@ -66,6 +66,7 @@ Button_OK=Aceptar
 Button_SendEmail=Enviar correo electr\u00f3nico
 Button_Export=Exportar
 Button_ExportOrgChart=Exportar organigrama corporativo
+Button_EmailTeam=Miembros del equipo de correo electr\u00f3nico
 Button_TokenVerification=Verificaci\u00f3n de testigo
 Button_SendToken=Enviar testigo
 Display_ActivateUser=Para confirmar su identidad, introduzca la siguiente informaci\u00f3n. Su informaci\u00f3n se utilizar\u00e1 para localizar y activar su cuenta de usuario.<p/>Aseg\u00farese de completar el proceso o no se activar\u00e1 correctamente su cuenta.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=Se le enviar\u00e1 un c\u00f3digo de seguridad p
 Display_RecoverTokenSendOneChoice=A fin de verificar su identidad, se le enviar\u00e1 un c\u00f3digo de seguridad a %1%.
 Display_RecoverTokenSendChoiceEmail=Enviar el c\u00f3digo a su direcci\u00f3n de correo electr\u00f3nico registrada.
 Display_RecoverTokenSendChoiceSMS=Enviar el c\u00f3digo a su tel\u00e9fono m\u00f3vil mediante mensaje de texto (SMS).
-Display_RecoverTokenSuccess=\u00a1Gracias! Su c\u00f3digo de seguridad enviado a <b>%1%</b> ha sido verificado.
+Display_RecoverTokenSuccess=\u00a1Gracias\!  Su c\u00f3digo de seguridad enviado a <b>%1%</b> ha sido verificado.
 Display_RecoverChoiceReset=Establezca una nueva contrase\u00f1a. Si ha olvidado su contrase\u00f1a y desea establecer una nueva, haga clic aqu\u00ed. Su cuenta se desbloquear\u00e1 tambi\u00e9n al configurar una nueva contrase\u00f1a.
 Display_RecoverChoiceResetInhibit=No se puede cambiar su contrase\u00f1a en este momento porque se encuentra dentro del l\u00edmite m\u00ednimo de duraci\u00f3n de la contrase\u00f1a.
 Display_RecoverChoiceUnlock=Desbloquee su cuenta. Si recuerda su contrase\u00f1a, puede desbloquear su cuenta seleccionando esta opci\u00f3n. No se modificar\u00e1 su contrase\u00f1a.
@@ -358,7 +359,7 @@ Value_Default=Por defecto
 Value_ProgressComplete=Finalizado
 Value_ProgressInProgress=En curso
 Placeholder_Search=Buscar
-Instructions_ExportOrgChart1=Haga clic en el bot\u00f3n Exportar para comenzar a descargar los datos del organigrama corporativo. Una vez finalizada la descarga, podr\u00e1 importar los datos a un programa como Visio para darles el formato de salida deseado.
+Instructions_ExportOrgChart1=Haga clic en el bot\u00f3n Exportar para descargar los datos del organigrama corporativo. Cuando finalice la descarga, podr\u00e1 usar estos datos para importar el organigrama corporativo al programa de su elecci\u00f3n. Los datos se exportan en formato CSV.
 Instructions_ExportOrgChart2=Elija la profundidad del nivel de exportaci\u00f3n y pulse el bot\u00f3n Exportar a continuaci\u00f3n.
 Instructions_EmailTeam1=La lista de correo electr\u00f3nico se genera en funci\u00f3n de los datos corporativos a partir de este punto. Al hacer clic en el bot\u00f3n Enviar correo electr\u00f3nico, deber\u00eda abrirse autom\u00e1ticamente el programa de correo electr\u00f3nico por defecto con la lista de direcciones de correo previamente completada.
 Instructions_EmailTeam2=Elija la profundidad del nivel de equipo y pulse el bot\u00f3n Correo electr\u00f3nico a continuaci\u00f3n.
