--- a/server/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fr_CA.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Envoyer un courriel
 Button_Export=Exporter
 Button_ExportOrgChart=Exporter l'organigramme
+Button_EmailTeam=Envoyer un courriel aux membres de l'\u00e9quipe
 Button_TokenVerification=V\u00e9rification du jeton
 Button_SendToken=Envoyer un jeton
 Display_ActivateUser=Pour confirmer votre identit\u00e9, entrez les informations suivantes. Elles serviront \u00e0 localiser votre compte utilisateur et \u00e0 l'activer.<p/>Veillez \u00e0 finaliser le processus pour que votre compte soit activ\u00e9 correctement.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=Un code de s\u00e9curit\u00e9 vous sera envoy\u0
 Display_RecoverTokenSendOneChoice=Pour v\u00e9rifier votre identit\u00e9, un code de s\u00e9curit\u00e9 vous sera envoy\u00e9 \u00e0 %1%.
 Display_RecoverTokenSendChoiceEmail=Envoyer le code \u00e0 votre adresse \u00e9lectronique enregistr\u00e9e.
 Display_RecoverTokenSendChoiceSMS=Envoyer le code par messagerie texte (SMS) sur votre t\u00e9l\u00e9phone mobile.
-Display_RecoverTokenSuccess=Merci!  Votre code de s\u00e9curit\u00e9 envoy\u00e9 \u00e0 <b>%1%</b> a \u00e9t\u00e9 v\u00e9rifi\u00e9.
+Display_RecoverTokenSuccess=Merci\!  Votre code de s\u00e9curit\u00e9 envoy\u00e9 \u00e0 <b>%1%</b> a \u00e9t\u00e9 v\u00e9rifi\u00e9.
 Display_RecoverChoiceReset=D\u00e9finissez un nouveau mot de passe. Si vous avez oubli\u00e9 votre mot de passe et souhaitez en d\u00e9finir un nouveau, cliquez ici. Votre compte sera \u00e9galement d\u00e9verrouill\u00e9 lorsque vous d\u00e9finirez un nouveau mot de passe.
 Display_RecoverChoiceResetInhibit=Votre mot de passe ne peut pas \u00eatre modifi\u00e9 pour le moment parce qu'il n'a pas encore atteint la dur\u00e9e de vie minimale du mot de passe.
 Display_RecoverChoiceUnlock=D\u00e9verrouillez votre compte. Si vous vous souvenez de votre mot de passe, vous pouvez d\u00e9verrouiller votre compte en s\u00e9lectionnant cette option. Votre mot de passe ne sera pas chang\u00e9.
@@ -358,7 +359,7 @@ Value_Default=Valeur par d\u00e9faut
 Value_ProgressComplete=Effectu\u00e9
 Value_ProgressInProgress=En cours
 Placeholder_Search=Rechercher
-Instructions_ExportOrgChart1=Cliquez sur le bouton Exporter pour commencer le t\u00e9l\u00e9chargement des donn\u00e9es de l'organigramme. Une fois le t\u00e9l\u00e9chargement termin\u00e9, vous pouvez importer les donn\u00e9es dans un programme tel que Visio afin de les formater pour obtenir le r\u00e9sultat souhait\u00e9.
+Instructions_ExportOrgChart1=Cliquez sur le bouton Exporter pour commencer le t\u00e9l\u00e9chargement des donn\u00e9es de l'organigramme. Une fois le t\u00e9l\u00e9chargement termin\u00e9, vous pouvez utiliser les donn\u00e9es pour importer ces donn\u00e9es d\u2019organigramme dans un programme de votre choix. Les donn\u00e9es sont export\u00e9es au format CSV.
 Instructions_ExportOrgChart2=Choisissez la profondeur du niveau d'exportation et appuyez sur le bouton Exporter ci-dessous.
 Instructions_EmailTeam1=La liste de courriels est g\u00e9n\u00e9r\u00e9e sur la base des donn\u00e9es organisationnelles \u00e0 partir de ce point. Lorsque vous cliquez sur le bouton Envoyer un courriel, votre programme de courriel par d\u00e9faut devrait s'ouvrir automatiquement, la liste des adresses de courriel \u00e9tant pr\u00e9remplie.
 Instructions_EmailTeam2=Choisissez la profondeur du niveau d'\u00e9quipe, et appuyez sur le bouton Envoyer un courriel ci-dessous.
