--- a/server/src/main/resources/password/pwm/i18n/Display_it.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_it.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Invia e-mail
 Button_Export=Esporta
 Button_ExportOrgChart=Esporta organigramma
+Button_EmailTeam=Invia e-mail ai membri del team
 Button_TokenVerification=Verifica token
 Button_SendToken=Invia token
 Display_ActivateUser=Per confermare l'identit\u00e0, immettere le informazioni seguenti. Le informazioni dell'utente saranno utilizzate per individuare e attivare l'account utente.<p/>Affinch\u00e9 l'account venga attivato correttamente, \u00e8 necessario completare la procedura.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=All'utente verr\u00e0 inviato un codice di sicur
 Display_RecoverTokenSendOneChoice=Per verificare l'identit\u00e0 dell'utente, un codice di sicurezza \u00e8 stato inviato a %1%.
 Display_RecoverTokenSendChoiceEmail=Inviare il codice all'indirizzo e-mail dell'utente registrato.
 Display_RecoverTokenSendChoiceSMS=Inviare il codice al numero di cellulare dell'utente utilizzando un SMS.
-Display_RecoverTokenSuccess=Grazie. Il codice di sicurezza inviato a <b>%1%</b> \u00e8 stato verificato.
+Display_RecoverTokenSuccess=Grazie\!  Il codice di sicurezza inviato a <b>%1%</b> \u00e8 stato verificato.
 Display_RecoverChoiceReset=Impostare una nuova password. Se non si ricorda la password e si desidera impostarne una nuova, fare clic qui. Impostando una nuova password verr\u00e0 sbloccato anche l'account dell'utente.
 Display_RecoverChoiceResetInhibit=Impossibile modificare la password in questo momento, perch\u00e9 rientra nel limite di durata minimo.
 Display_RecoverChoiceUnlock=Sbloccare l'account. Se si ricorda la password, \u00e8 possibile sbloccare l'account selezionando questa opzione. La password non verr\u00e0 modificata.
@@ -358,7 +359,7 @@ Value_Default=Default
 Value_ProgressComplete=Completato
 Value_ProgressInProgress=In corso
 Placeholder_Search=Ricerca
-Instructions_ExportOrgChart1=Fare clic sul pulsante Esporta per iniziare a effettuare il download dei dati dell'organigramma. Quando il download \u00e8 completato, sar\u00e0 possibile importare i dati in un programma come Visio affinch\u00e9 possano essere formattati con l'output desiderato.
+Instructions_ExportOrgChart1=Fare clic sul pulsante Esporta per iniziare il download dei dati dell'organigramma. Una volta completato il download, sar\u00e0 possibile utilizzare i dati per importare tali dati dell'organigramma nel programma desiderato. I dati vengono esportati in formato CSV.
 Instructions_ExportOrgChart2=Scegliere la profondit\u00e0 del livello di esportazione, quindi premere il pulsante Invia per e-mail di seguito.
 Instructions_EmailTeam1=L'elenco delle e-mail viene generato in base ai dati dell'organizzazione, a partire da questo punto. Quando si fa clic sul pulsante Invia per-mail, il programma e-mail di default verr\u00e0 avviato automaticamente con l'elenco degli indirizzi e-mail precompilato.
 Instructions_EmailTeam2=Scegliere la profondit\u00e0 del livello del team, quindi premere il pulsante Invia per e-mail di seguito.
