--- a/server/src/main/resources/password/pwm/i18n/Display_pl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_pl.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Wy\u015blij e-mail
 Button_Export=Eksportuj
 Button_ExportOrgChart=Eksportuj diagram organizacyjny
+Button_EmailTeam=E-mail do cz\u0142onk\u00f3w zespo\u0142u
 Button_TokenVerification=Weryfikacja tokenu
 Button_SendToken=Wy\u015blij token
 Display_ActivateUser=Aby potwierdzi\u0107 swoj\u0105 to\u017csamo\u015b\u0107, wprowad\u017a poni\u017csze informacje. Te informacje pos\u0142u\u017c\u0105 do odnalezienia i aktywowania konta u\u017cytkownika.<p/>Wykonaj ten proces w ca\u0142o\u015bci, w przeciwnym razie konto nie zostanie poprawnie aktywowane.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=W celu zweryfikowania Twojej to\u017csamo\u015bc
 Display_RecoverTokenSendOneChoice=W celu zweryfikowania Twojej to\u017csamo\u015bci zostanie Ci wys\u0142any kod zabezpiecze\u0144 (%1%).
 Display_RecoverTokenSendChoiceEmail=Wy\u015blij kod na zarejestrowane adresy e-mail.
 Display_RecoverTokenSendChoiceSMS=Wy\u015blij kod na telefon kom\u00f3rkowy przy u\u017cyciu wiadomo\u015bci tekstowej (SMS).
-Display_RecoverTokenSuccess=Dzi\u0119kujemy! Kod zabezpiecze\u0144 wys\u0142any do <b>%1%</b> zosta\u0142 zweryfikowany.
+Display_RecoverTokenSuccess=Dzi\u0119kujemy\! Kod zabezpiecze\u0144 wys\u0142any do <b>%1%</b> zosta\u0142 zweryfikowany.
 Display_RecoverChoiceReset=Ustaw nowe has\u0142o. Je\u015bli nie pami\u0119tasz has\u0142a i chcesz ustawi\u0107 nowe, kliknij tutaj. Twoje konto zostanie te\u017c odblokowane po ustawieniu nowego has\u0142a.
 Display_RecoverChoiceResetInhibit=Nie mo\u017cna teraz zmieni\u0107 has\u0142a, poniewa\u017c jest ono w limicie minimalnego czasu obowi\u0105zywania has\u0142a.
 Display_RecoverChoiceUnlock=Odblokuj swoje konto. Je\u015bli pami\u0119tasz has\u0142o, mo\u017cesz odblokowa\u0107 konto, wybieraj\u0105c t\u0119 opcj\u0119. Twoje has\u0142o nie zostanie zmienione.
@@ -358,7 +359,7 @@ Value_Default=Domy\u015blne
 Value_ProgressComplete=Uko\u0144cz
 Value_ProgressInProgress=W toku
 Placeholder_Search=Wyszukaj
-Instructions_ExportOrgChart1=Kliknij przycisk Eksportuj, aby rozpocz\u0105\u0107 pobieranie danych diagramu organizacyjnego. Po uko\u0144czeniu pobierania mo\u017cesz zaimportowa\u0107 dane do programu, takiego jak Visio, aby sformatowa\u0107 je w \u017c\u0105dany spos\u00f3b.
+Instructions_ExportOrgChart1=Kliknij przycisk Eksportuj, aby rozpocz\u0105\u0107 pobieranie danych diagramu organizacyjnego. Po uko\u0144czeniu pobierania mo\u017cesz u\u017cy\u0107 tych danych, aby zaimportowa\u0107 dane tego diagramu organizacyjnego do wybranego programu. Dane s\u0105 eksportowane w formacie CSV.
 Instructions_ExportOrgChart2=Wybierz g\u0142\u0119boko\u015b\u0107 poziomu eksportu i naci\u015bnij przycisk Eksportuj poni\u017cej.
 Instructions_EmailTeam1=Lista adres\u00f3w e-mail jest generowana na podstawie danych organizacyjnych, pocz\u0105wszy od tego miejsca. Gdy klikniesz przycisk Wy\u015blij e-mail, powinien zosta\u0107 automatycznie otwarty domy\u015blny program poczty e-mail ze wst\u0119pnie wype\u0142nion\u0105 list\u0105 adres\u00f3w e-mail.
 Instructions_EmailTeam2=Wybierz g\u0142\u0119boko\u015b\u0107 poziomu zespo\u0142u i naci\u015bnij przycisk E-mail poni\u017cej.
