--- a/server/src/main/resources/password/pwm/i18n/Display_sv.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_sv.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Skicka e-post
 Button_Export=Exportera
 Button_ExportOrgChart=Exportera organisationsschema
+Button_EmailTeam=Skicka e-post till gruppmedlemmar
 Button_TokenVerification=Verifiering av token
 Button_SendToken=Skicka token
 Display_ActivateUser=Du bekr\u00e4ftar din identitet genom att ange f\u00f6ljande information. Din information anv\u00e4nds f\u00f6r att hitta och aktivera ditt anv\u00e4ndarkonto.<p/>Du m\u00e5ste slutf\u00f6ra processen, annars aktiveras inte ditt konto korrekt.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=F\u00f6r att verifiera din identitet skickas en 
 Display_RecoverTokenSendOneChoice=En s\u00e4kerhetskod skickas till dig p\u00e5 %1% s\u00e5 att du kan verifiera din identitet.
 Display_RecoverTokenSendChoiceEmail=Skicka koden till din registrerade e-postadress.
 Display_RecoverTokenSendChoiceSMS=Skicka koden till din mobil som textmeddelande (SMS).
-Display_RecoverTokenSuccess=Tack! S\u00e4kerhetskoden som skickades till <b>%1%</b> har verifierats.
+Display_RecoverTokenSuccess=Tack\! S\u00e4kerhetskoden som skickades till <b>%1%</b> har verifierats.
 Display_RecoverChoiceReset=Ange ett nytt l\u00f6senord. Om du har gl\u00f6mt bort ditt l\u00f6senord och vill ange ett nytt klickar du h\u00e4r. Ditt konto kommer ocks\u00e5 att l\u00e5sas upp n\u00e4r du anger ett nytt l\u00f6senord.
 Display_RecoverChoiceResetInhibit=Ditt l\u00f6senord kan inte \u00e4ndras just nu eftersom det fortfarande \u00e4r inom minimigr\u00e4nsen f\u00f6r l\u00f6senordets giltighetstid.
 Display_RecoverChoiceUnlock=L\u00e5s upp ditt konto. Om du kommer ih\u00e5g l\u00f6senordet kan du l\u00e5sa upp kontot med det h\u00e4r alternativet. Ditt l\u00f6senord \u00e4ndras inte.
@@ -358,7 +359,7 @@ Value_Default=Standard
 Value_ProgressComplete=Slutf\u00f6r
 Value_ProgressInProgress=P\u00e5g\u00e5r
 Placeholder_Search=S\u00f6k
-Instructions_ExportOrgChart1=Klicka p\u00e5 knappen Exportera f\u00f6r att p\u00e5b\u00f6rja h\u00e4mtningen av organisationsschemadata. N\u00e4r h\u00e4mtningen \u00e4r slutf\u00f6rd kan du importera dina data till ett program som Visio, s\u00e5 att de kan formateras till \u00f6nskade utdata.
+Instructions_ExportOrgChart1=Klicka p\u00e5 knappen Exportera om du vill b\u00f6rja h\u00e4mta organisationsdiagramdata. N\u00e4r h\u00e4mtningen \u00e4r klar kan du anv\u00e4nda datan f\u00f6r att importera organisationsdiagramdatan i \u00f6nskat program. Datan exporteras i CSV-format.
 Instructions_ExportOrgChart2=V\u00e4lj niv\u00e5djup f\u00f6r export och tryck p\u00e5 knappen Exportera nedan.
 Instructions_EmailTeam1=E-postlistan skapas baserat p\u00e5 organisationsdata fr\u00e5n och med nu. N\u00e4r du klickar p\u00e5 knappen Skicka e-post b\u00f6r ditt standardprogram f\u00f6r e-post \u00f6ppnas automatiskt, med listan med e-postadresser redan ifylld.
 Instructions_EmailTeam2=V\u00e4lj niv\u00e5djup f\u00f6r gruppen och tryck p\u00e5 knappen E-post nedan.
