--- a/server/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
@@ -66,6 +66,7 @@ Button_OK=\u786e\u5b9a
 Button_SendEmail=\u53d1\u9001\u7535\u5b50\u90ae\u4ef6
 Button_Export=\u5bfc\u51fa
 Button_ExportOrgChart=\u5bfc\u51fa\u7ec4\u7ec7\u7ed3\u6784\u56fe
+Button_EmailTeam=\u7535\u5b50\u90ae\u4ef6\u56e2\u961f\u6210\u5458
 Button_TokenVerification=\u4ee4\u724c\u6821\u9a8c
 Button_SendToken=\u53d1\u9001\u4ee4\u724c
 Display_ActivateUser=\u8981\u786e\u8ba4\u60a8\u7684\u8eab\u4efd\uff0c\u8bf7\u8f93\u5165\u4ee5\u4e0b\u4fe1\u606f\u3002\u60a8\u7684\u4fe1\u606f\u5c06\u4f1a\u7528\u4e8e\u67e5\u627e\u4e0e\u6fc0\u6d3b\u60a8\u7684\u7528\u6237\u5e10\u6237\u3002<p/>\u8bf7\u786e\u4fdd\u5b8c\u6210\u6b64\u8fc7\u7a0b\uff0c\u5426\u5219\u65e0\u6cd5\u6b63\u5e38\u6fc0\u6d3b\u60a8\u7684\u5e10\u6237\u3002
@@ -358,7 +359,7 @@ Value_Default=\u9ed8\u8ba4\u503c
 Value_ProgressComplete=\u5b8c\u6210
 Value_ProgressInProgress=\u8fdb\u884c\u4e2d
 Placeholder_Search=\u641c\u7d22
-Instructions_ExportOrgChart1=\u5355\u51fb\u201c\u5bfc\u51fa\u201d\u6309\u94ae\u5f00\u59cb\u4e0b\u8f7d\u7ec4\u7ec7\u7ed3\u6784\u56fe\u6570\u636e\u3002\u4e0b\u8f7d\u5b8c\u6210\u540e\uff0c\u60a8\u53ef\u4ee5\u5c06\u6570\u636e\u5bfc\u5165\u67d0\u4e2a\u7a0b\u5e8f\uff0c\u4f8b\u5982 Visio\uff0c\u4f7f\u5176\u4ee5\u6240\u9700\u7684\u683c\u5f0f\u8f93\u51fa\u3002
+Instructions_ExportOrgChart1=\u5355\u51fb\u201c\u5bfc\u51fa\u201d\u6309\u94ae\u5f00\u59cb\u4e0b\u8f7d\u7ec4\u7ec7\u7ed3\u6784\u56fe\u6570\u636e\u3002\u4e0b\u8f7d\u5b8c\u6210\u540e\uff0c\u60a8\u53ef\u4ee5\u4f7f\u7528\u8fd9\u4e9b\u6570\u636e\u5c06\u6b64\u7ec4\u7ec7\u7ed3\u6784\u56fe\u6570\u636e\u5bfc\u5165\u6240\u9009\u7a0b\u5e8f\u3002\u6570\u636e\u4ee5 CSV \u683c\u5f0f\u5bfc\u51fa\u3002
 Instructions_ExportOrgChart2=\u9009\u62e9\u5bfc\u51fa\u7ea7\u522b\u6df1\u5ea6\uff0c\u6309\u4e0b\u9762\u7684\u201c\u5bfc\u51fa\u201d\u6309\u94ae\u3002
 Instructions_EmailTeam1=\u7535\u5b50\u90ae\u4ef6\u5217\u8868\u57fa\u4e8e\u6b64\u65f6\u5f00\u59cb\u7684\u7ec4\u7ec7\u6570\u636e\u800c\u751f\u6210\u3002\u5355\u51fb\u201c\u53d1\u9001\u7535\u5b50\u90ae\u4ef6\u201d\u6309\u94ae\u540e\uff0c\u5c06\u81ea\u52a8\u6253\u5f00\u9ed8\u8ba4\u7535\u5b50\u90ae\u4ef6\u7a0b\u5e8f\uff0c\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u5217\u8868\u4e3a\u9884\u586b\u5145\u72b6\u6001\u3002
 Instructions_EmailTeam2=\u9009\u62e9\u56e2\u961f\u7ea7\u522b\u6df1\u5ea6\uff0c\u6309\u4e0b\u9762\u7684\u201c\u7535\u5b50\u90ae\u4ef6\u201d\u6309\u94ae\u3002
