--- a/server/src/main/resources/password/pwm/i18n/Error_da.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_da.properties
@@ -162,7 +162,7 @@ Error_PasswordOnlyBad=Adgangskoden er forkert. Pr\u00f8v igen.
 Error_RecoverySequenceIncomplete=Der opstod et problem under sekvensen med den glemte adgangskode. Pr\u00f8v igen.
 Error_FileTypeIncorrect=Filtypen er ikke korrekt.
 Error_FileTooLarge=Filen er for stor.
-Error_NodeServiceError=Der opstod en fejl med klyngetjenesten: %1%. Kontroll\u00e9r logfilerne for at f\u00e5 flere oplysninger.
+Error_NodeServiceError=Der opstod en fejl med nodetjenesten: %1%. Kontroll\u00e9r logfilerne for at f\u00e5 flere oplysninger.
 Error_RemoteErrorValue=Fjernfejl: %1%
 Error_WordlistImportError=Der opstod en fejl under import af ordlisten: %1%
 Error_PwNotifyServiceError=Der opstod en fejl under k\u00f8rsel af tjenesten til notifikation om adgangskode: %1%
