--- a/server/src/main/resources/password/pwm/i18n/Error_fr.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_fr.properties
@@ -162,7 +162,7 @@ Error_PasswordOnlyBad=Le mot de passe est incorrect. Veuillez r\u00e9essayer.
 Error_RecoverySequenceIncomplete=Un probl\u00e8me s'est produit lors de la s\u00e9quence de mot de passe oubli\u00e9, veuillez r\u00e9essayer.
 Error_FileTypeIncorrect=Le type de fichier n'est pas correct.
 Error_FileTooLarge=Le fichier est trop volumineux.
-Error_NodeServiceError=Une erreur s'est produite avec le service de grappe : %1%. Consultez les fichiers journaux pour plus d'informations.
+Error_NodeServiceError=Une erreur s'est produite avec le service de noeud : %1%. Consultez les fichiers journaux pour plus d'informations.
 Error_RemoteErrorValue=Erreur distante : %1%
 Error_WordlistImportError=Une erreur s'est produite lors de l'importation de la liste de mots : %1%
 Error_PwNotifyServiceError=Une erreur s'est produite lors de l'ex\u00e9cution du service de notification de mot de passe : %1%
