--- a/server/src/main/resources/password/pwm/i18n/Error_sv.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_sv.properties
@@ -162,7 +162,7 @@ Error_PasswordOnlyBad=L\u00f6senordet \u00e4r felaktigt. F\u00f6rs\u00f6k igen.
 Error_RecoverySequenceIncomplete=Ett fel intr\u00e4ffade under sekvensen f\u00f6r gl\u00f6mt l\u00f6senord. F\u00f6rs\u00f6k igen.
 Error_FileTypeIncorrect=Filtypen \u00e4r felaktig.
 Error_FileTooLarge=Filen \u00e4r f\u00f6r stor.
-Error_NodeServiceError=Ett fel intr\u00e4ffade med klustertj\u00e4nsten: %1%. Se loggfilerna f\u00f6r mer information.
+Error_NodeServiceError=Ett fel intr\u00e4ffade med nodtj\u00e4nsten: %1%. Se loggfilerna f\u00f6r mer information.
 Error_RemoteErrorValue=Fj\u00e4rrfel: %1%
 Error_WordlistImportError=Ett fel intr\u00e4ffade n\u00e4r ordlistan skulle importeras: %1%
 Error_PwNotifyServiceError=Ett fel intr\u00e4ffade n\u00e4r aviseringstj\u00e4nsten f\u00f6r l\u00f6senord k\u00f6rdes: %1%
