--- a/server/src/main/resources/password/pwm/i18n/Message_ca.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_ca.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=M\u00ednim de maj\u00fascules
 Rule_MaximumUpperCase=M\u00e0xim de maj\u00fascules
 Rule_MinimumLowerCase=M\u00ednim de min\u00fascules
 Rule_MaximumLowerCase=M\u00e0xim de min\u00fascules
+Rule_AllowNonAlpha=Permet les versions que no siguin alfa
 Rule_AllowNumeric=Permet n\u00fameros
 Rule_MinimumNumeric=M\u00ednim de n\u00fameros
 Rule_MaximumNumeric=M\u00e0xim de n\u00fameros
