--- a/server/src/main/resources/password/pwm/i18n/Message_da.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_da.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Min. antal store bogstaver
 Rule_MaximumUpperCase=Maks. antal store bogstaver
 Rule_MinimumLowerCase=Min. antal sm\u00e5 bogstaver
 Rule_MaximumLowerCase=Maks. antal sm\u00e5 bogstaver
+Rule_AllowNonAlpha=Tillad tegn, der ikke er alfanumeriske
 Rule_AllowNumeric=Tillad numeriske tegn
 Rule_MinimumNumeric=Min. antal numeriske tegn
 Rule_MaximumNumeric=Maks. antal numeriske tegn
