--- a/server/src/main/resources/password/pwm/i18n/Message_de.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_de.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Mindestanzahl Gro\u00dfbuchstaben
 Rule_MaximumUpperCase=H\u00f6chstanzahl Gro\u00dfbuchstaben
 Rule_MinimumLowerCase=Mindestanzahl Kleinbuchstaben
 Rule_MaximumLowerCase=H\u00f6chstanzahl Kleinbuchstaben
+Rule_AllowNonAlpha=Nicht-alphanumerische Zeichen zulassen
 Rule_AllowNumeric=Numerische Zeichen zulassen
 Rule_MinimumNumeric=Mindestanzahl numerische Zeichen
 Rule_MaximumNumeric=H\u00f6chstanzahl numerische Zeichen
