--- a/server/src/main/resources/password/pwm/i18n/Message_es.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_es.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=M\u00ednimo may\u00fasculas
 Rule_MaximumUpperCase=M\u00e1ximo may\u00fasculas
 Rule_MinimumLowerCase=M\u00ednimo min\u00fasculas
 Rule_MaximumLowerCase=M\u00e1ximo min\u00fasculas
+Rule_AllowNonAlpha=Permitir no alfanum\u00e9ricos
 Rule_AllowNumeric=Permitir num\u00e9ricos
 Rule_MinimumNumeric=M\u00ednimo num\u00e9ricos
 Rule_MaximumNumeric=M\u00e1ximo num\u00e9ricos
