--- a/server/src/main/resources/password/pwm/i18n/Message_fr.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_fr.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Nombre minimal de majuscules
 Rule_MaximumUpperCase=Nombre maximal de majuscules
 Rule_MinimumLowerCase=Nombre minimal de minuscules
 Rule_MaximumLowerCase=Nombre maximal de minuscules
+Rule_AllowNonAlpha=Autoriser les caract\u00e8res non alphanum\u00e9riques
 Rule_AllowNumeric=Autoriser les caract\u00e8res num\u00e9riques
 Rule_MinimumNumeric=Nombre minimal de caract\u00e8res num\u00e9riques
 Rule_MaximumNumeric=Nombre maximal de caract\u00e8res num\u00e9riques
