--- a/server/src/main/resources/password/pwm/i18n/Message_it.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_it.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Numero minimo di maiuscole
 Rule_MaximumUpperCase=Numero massimo di maiuscole
 Rule_MinimumLowerCase=Numero minimo di minuscole
 Rule_MaximumLowerCase=Numero massimo di minuscole
+Rule_AllowNonAlpha=Consenti caratteri non alfanumerici
 Rule_AllowNumeric=Consenti numeri
 Rule_MinimumNumeric=Numero minimo di numeri
 Rule_MaximumNumeric=Numero massimo di numeri
