--- a/server/src/main/resources/password/pwm/i18n/Message_iw.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_iw.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=\u05de\u05e1\u05e4\u05e8 \u05de\u05d9\u05e0\u05d9\u05de\u0
 Rule_MaximumUpperCase=\u05de\u05e1\u05e4\u05e8 \u05de\u05e7\u05e1\u05d9\u05de\u05dc\u05d9 \u05e9\u05dc \u05d0\u05d5\u05ea\u05d9\u05d5\u05ea \u05e8\u05d9\u05e9\u05d9\u05d5\u05ea
 Rule_MinimumLowerCase=\u05de\u05e1\u05e4\u05e8 \u05de\u05d9\u05e0\u05d9\u05de\u05dc\u05d9 \u05e9\u05dc \u05d0\u05d5\u05ea\u05d9\u05d5\u05ea \u05e7\u05d8\u05e0\u05d5\u05ea
 Rule_MaximumLowerCase=\u05de\u05e1\u05e4\u05e8 \u05de\u05e7\u05e1\u05d9\u05de\u05dc\u05d9 \u05e9\u05dc \u05d0\u05d5\u05ea\u05d9\u05d5\u05ea \u05e7\u05d8\u05e0\u05d5\u05ea
+Rule_AllowNonAlpha=\u05d0\u05e4\u05e9\u05e8 \u05ea\u05d5\u05d5\u05d9\u05dd \u05e9\u05d0\u05d9\u05e0\u05dd \u05d0\u05dc\u05e4\u05d0\u05e0\u05d5\u05de\u05e8\u05d9\u05d9\u05dd
 Rule_AllowNumeric=\u05d0\u05e4\u05e9\u05e8 \u05ea\u05d5\u05d5\u05d9\u05dd \u05de\u05e1\u05e4\u05e8\u05d9\u05d9\u05dd
 Rule_MinimumNumeric=\u05de\u05e1\u05e4\u05e8 \u05de\u05d9\u05e0\u05d9\u05de\u05dc\u05d9 \u05e9\u05dc \u05ea\u05d5\u05d5\u05d9\u05dd \u05de\u05e1\u05e4\u05e8\u05d9\u05d9\u05dd
 Rule_MaximumNumeric=\u05de\u05e1\u05e4\u05e8 \u05de\u05e7\u05e1\u05d9\u05de\u05dc\u05d9 \u05e9\u05dc \u05ea\u05d5\u05d5\u05d9\u05dd \u05de\u05e1\u05e4\u05e8\u05d9\u05d9\u05dd
