--- a/server/src/main/resources/password/pwm/i18n/Message_nl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_nl.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Minimum aantal hoofdletters
 Rule_MaximumUpperCase=Maximum aantal hoofdletters
 Rule_MinimumLowerCase=Minimum aantal kleine letters
 Rule_MaximumLowerCase=Maximum aantal kleine letters
+Rule_AllowNonAlpha=Niet-alfanumerieke tekens toestaan
 Rule_AllowNumeric=Numeriek toestaan
 Rule_MinimumNumeric=Minimaal numeriek
 Rule_MaximumNumeric=Maximaal numeriek
