--- a/server/src/main/resources/password/pwm/i18n/Message_pl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_pl.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Minimalna liczba du\u017cych liter
 Rule_MaximumUpperCase=Maksymalna liczba du\u017cych liter
 Rule_MinimumLowerCase=Minimalna liczba ma\u0142ych liter
 Rule_MaximumLowerCase=Maksymalna liczba ma\u0142ych liter
+Rule_AllowNonAlpha=Zezwalaj na inne ni\u017c alfanumeryczne
 Rule_AllowNumeric=Zezwalaj na cyfry
 Rule_MinimumNumeric=Minimalna liczba cyfr
 Rule_MaximumNumeric=Maksymalna liczba cyfr
