--- a/server/src/main/resources/password/pwm/i18n/Message_sv.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_sv.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Min versaler
 Rule_MaximumUpperCase=Max versaler
 Rule_MinimumLowerCase=Min gemener
 Rule_MaximumLowerCase=Max gemener
+Rule_AllowNonAlpha=Till\u00e5t icke-alfa
 Rule_AllowNumeric=Till\u00e5t numeriskt
 Rule_MinimumNumeric=Min numeriska
 Rule_MaximumNumeric=Max numeriska
