--- a/server/src/main/resources/password/pwm/i18n/Message_zh_CN.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_zh_CN.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=\u5927\u5199\u5b57\u7b26\u6700\u5c0f\u6570\u76ee
 Rule_MaximumUpperCase=\u5927\u5199\u5b57\u7b26\u6700\u5927\u6570\u76ee
 Rule_MinimumLowerCase=\u5c0f\u5199\u5b57\u7b26\u6700\u5c0f\u6570\u76ee
 Rule_MaximumLowerCase=\u5c0f\u5199\u5b57\u7b26\u6700\u5927\u6570\u76ee
+Rule_AllowNonAlpha=\u5141\u8bb8\u975e Alpha \u5b57\u7b26
 Rule_AllowNumeric=\u5141\u8bb8\u4f7f\u7528\u6570\u5b57
 Rule_MinimumNumeric=\u6570\u5b57\u5b57\u7b26\u6700\u5c0f\u6570\u76ee
 Rule_MaximumNumeric=\u6570\u5b57\u5b57\u7b26\u6700\u5927\u6570\u76ee
