--- a/server/src/main/resources/password/pwm/i18n/Display_en_CA.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_en_CA.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Send Email
 Button_Export=Export
 Button_ExportOrgChart=Export Organizational Chart
+Button_EmailTeam=Email Team Members
 Button_TokenVerification=Token Verification
 Button_SendToken=Send Token
 Display_ActivateUser=To confirm your identity, please enter the following information.Your information will be used to locate and activate your user account.<p/>Be sure to complete the process or your account will not be activated properly.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=To verify your identity, a security code will be
 Display_RecoverTokenSendOneChoice=To verify your identity, a security code will be sent to you at %1%.
 Display_RecoverTokenSendChoiceEmail=Send code to your registered email address.
 Display_RecoverTokenSendChoiceSMS=Send code to your mobile phone using text messaging (SMS).
-Display_RecoverTokenSuccess=Thank you! Your security code sent to <b>%1%</b> has been verified.
+Display_RecoverTokenSuccess=Thank you\! Your security code sent to <b>%1%</b> has been verified.
 Display_RecoverChoiceReset=Set a new password. If you have forgotten your password and would like to set a new one, click here. Your account will also be unlocked when you set a new password.
 Display_RecoverChoiceResetInhibit=Your password cannot be changed at this time because it is within the minimum password lifetime limit.
 Display_RecoverChoiceUnlock=Unlock your account. If you remember your password, you can unlock your account by selecting this option. Your password will not be changed.
@@ -358,7 +359,7 @@ Value_Default=Default
 Value_ProgressComplete=Complete
 Value_ProgressInProgress=In Progress
 Placeholder_Search=Search
-Instructions_ExportOrgChart1=Click the Export button to begin download of the organizational chart data. After download is complete, you can import the data into a program like Visio so that it can be formatted into the desired output.
+Instructions_ExportOrgChart1=Click the Export button to begin download of the organizational chart data. After download is complete, you can use the data to import this org chart data into a program of your choice. The data is exported in CSV format.
 Instructions_ExportOrgChart2=Choose the export level depth and press the Export button below.
 Instructions_EmailTeam1=The email list is generated based on organizational data starting at this point. When you click the Send Email button, your default email program should automatically open, with the list of email addresses pre-filled.
 Instructions_EmailTeam2=Choose the team level depth and press the Email button below.
