--- a/server/src/main/resources/password/pwm/i18n/Display_nl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_nl.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=E-mail verzenden
 Button_Export=Exporteren
 Button_ExportOrgChart=Organisatiediagram exporteren
+Button_EmailTeam=Teamleden e-mailen
 Button_TokenVerification=Tokenverificatie
 Button_SendToken=Token verzenden
 Display_ActivateUser=Ter bevestiging van uw identiteit dient u de volgende gegevens in te voeren. Deze gegevens worden gebruikt om uw gebruikersaccount te vinden en te activeren.<p/> Zorg ervoor dat u het proces volledig doorloopt. Anders wordt uw account niet juist geactiveerd.
@@ -150,7 +151,7 @@ Display_RecoverTokenSendChoices=Als u uw identiteit wilt verifi\u00ebren, wordt 
 Display_RecoverTokenSendOneChoice=Ter verificatie van uw identiteit ontvangt u een beveiligingscode op %1%.
 Display_RecoverTokenSendChoiceEmail=Verzend de code naar uw geregistreerde e-mailadres.
 Display_RecoverTokenSendChoiceSMS=Verzend de code naar uw mobiele telefoon met tekstberichten (sms).
-Display_RecoverTokenSuccess=Bedankt. Uw beveiligingscode die is verzonden naar <b>%1%</b>, is geverifieerd.
+Display_RecoverTokenSuccess=Bedankt\! Uw beveiligingscode die is verzonden naar <b>%1%</b>, is geverifieerd.
 Display_RecoverChoiceReset=Stel een nieuw wachtwoord in. Als u uw wachtwoord bent vergeten en een nieuw wachtwoord wilt instellen, klikt u hier. Uw account wordt ook ontgrendeld als u een nieuw wachtwoord instelt.
 Display_RecoverChoiceResetInhibit=Uw wachtwoord kan momenteel niet worden gewijzigd, omdat het zich binnen de limiet voor de minimale levensduur van het wachtwoord bevindt.
 Display_RecoverChoiceUnlock=Ontgrendel uw account. Als u uw wachtwoord weet, kunt u uw account ontgrendelen door deze optie te selecteren. Uw wachtwoord wordt dan niet gewijzigd.
@@ -361,7 +362,7 @@ Value_Default=Standaard
 Value_ProgressComplete=Voltooien
 Value_ProgressInProgress=Wordt uitgevoerd
 Placeholder_Search=Zoeken
-Instructions_ExportOrgChart1=Klik op de knop Exporteren om de gegevens uit het organisatiediagram te downloaden. Nadat het downloaden is voltooid, kunt u de gegevens importeren in een programma zoals Visio, zodat u de gegevens kunt opmaken in de gewenste uitvoer.
+Instructions_ExportOrgChart1=Klik op de knop Exporteren om het downloaden van de gegevens uit het organisatiediagram te starten. Zodra het downloaden is voltooid, kunt u de gegevens gebruiken om de gegevens uit het organisatiediagram te importeren in een programma naar keuze. De gegevens worden ge\u00ebxporteerd naar een CSV-indeling.
 Instructions_ExportOrgChart2=Kies de niveaudiepte voor de export en druk hieronder op de knop Exporteren.
 Instructions_EmailTeam1=De e-maillijst wordt gegenereerd op basis van de organisatiegegevens vanaf dit punt. Wanneer u op de knop E-mail verzenden klikt, wordt automatisch uw standaard e-mailprogramma geopend en is de lijst met e-mailadressen al ingevuld.
 Instructions_EmailTeam2=Kies de niveaudiepte voor het team en druk hieronder op de knop E-mail.
