--- a/server/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -66,6 +66,7 @@ Button_OK=OK
 Button_SendEmail=Enviar E-mail
 Button_Export=Exportar
 Button_ExportOrgChart=Exportar Organograma
+Button_EmailTeam=Enviar E-mail para os Membros da Equipe
 Button_TokenVerification=Verifica\u00e7\u00e3o por Token
 Button_SendToken=Enviar Token
 Display_ActivateUser=Para confirmar sua identidade, digite as informa\u00e7\u00f5es a seguir. Suas informa\u00e7\u00f5es ser\u00e3o usadas para localizar e ativar a conta do usu\u00e1rio.<p/>Conclua o processo ou sua conta n\u00e3o ser\u00e1 ativada adequadamente.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=Voc\u00ea receber\u00e1 um c\u00f3digo de segura
 Display_RecoverTokenSendOneChoice=Para verificar sua identidade, um c\u00f3digo de seguran\u00e7a ser\u00e1 enviado a voc\u00ea em %1%.
 Display_RecoverTokenSendChoiceEmail=Enviar o c\u00f3digo para seu endere\u00e7o de e-mail registrado.
 Display_RecoverTokenSendChoiceSMS=Enviar o c\u00f3digo para seu telefone celular usando mensagem de texto (SMS).
-Display_RecoverTokenSuccess=Obrigado! O c\u00f3digo de seguran\u00e7a enviado para <b>%1%</b> foi verificado.
+Display_RecoverTokenSuccess=Obrigado\! O c\u00f3digo de seguran\u00e7a enviado para <b>%1%</b> foi verificado.
 Display_RecoverChoiceReset=Defina uma nova senha. Se tiver esquecido a senha e desejar definir uma nova, clique aqui. A conta tamb\u00e9m ser\u00e1 desbloqueada quando voc\u00ea definir uma nova senha.
 Display_RecoverChoiceResetInhibit=Sua senha n\u00e3o pode ser mudada no momento porque est\u00e1 dentro do limite m\u00ednimo de vida \u00fatil da senha.
 Display_RecoverChoiceUnlock=Desbloqueie a sua conta. Se voc\u00ea lembrar a senha, poder\u00e1 desbloquear a conta selecionando esta op\u00e7\u00e3o. Sua senha n\u00e3o ser\u00e1 mudada.
@@ -358,7 +359,7 @@ Value_Default=Padr\u00e3o
 Value_ProgressComplete=Completo
 Value_ProgressInProgress=Em Andamento
 Placeholder_Search=Pesquisa
-Instructions_ExportOrgChart1=Clique no bot\u00e3o Exportar para iniciar o download dos dados do organograma. Ap\u00f3s o t\u00e9rmino do download, voc\u00ea poder\u00e1 importar os dados em um programa como o Visio para que possam ser formatados para a sa\u00edda desejada.
+Instructions_ExportOrgChart1=Clique no bot\u00e3o Exportar para come\u00e7ar o download dos dados do organograma. Ap\u00f3s a conclus\u00e3o do download, use-os para importar os dados do organograma para o programa de sua escolha. Eles ser\u00e3o exportados no formato CSV.
 Instructions_ExportOrgChart2=Escolha a profundidade do n\u00edvel de exporta\u00e7\u00e3o e pressione o bot\u00e3o Exportar abaixo.
 Instructions_EmailTeam1=A lista de e-mails \u00e9 gerada com base em dados organizacionais a come\u00e7ar deste ponto. Quando voc\u00ea clicar no bot\u00e3o Enviar E-mail, seu programa de e-mail padr\u00e3o dever\u00e1 abrir automaticamente, com a lista de endere\u00e7os de e-mail j\u00e1 preenchida.
 Instructions_EmailTeam2=Escolha a profundidade do n\u00edvel da equipe e pressione o bot\u00e3o E-mail abaixo.
