--- a/server/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_zh_TW.properties
@@ -66,6 +66,7 @@ Button_OK=\u78ba\u5b9a
 Button_SendEmail=\u50b3\u9001\u96fb\u5b50\u90f5\u4ef6
 Button_Export=\u8f38\u51fa
 Button_ExportOrgChart=\u8f38\u51fa\u7d44\u7e54\u5716
+Button_EmailTeam=\u96fb\u5b50\u90f5\u4ef6\u5718\u968a\u6210\u54e1
 Button_TokenVerification=\u8a18\u865f\u9a57\u8b49
 Button_SendToken=\u50b3\u9001\u8a18\u865f
 Display_ActivateUser=\u82e5\u8981\u78ba\u8a8d\u60a8\u7684\u8eab\u5206\uff0c\u8acb\u8f38\u5165\u4e0b\u5217\u8cc7\u8a0a\u3002\u7cfb\u7d71\u5c07\u4f7f\u7528\u60a8\u7684\u8cc7\u8a0a\u627e\u51fa\u4e26\u555f\u52d5\u60a8\u7684\u4f7f\u7528\u8005\u5e33\u6236\u3002<p/>\u8acb\u52d9\u5fc5\u5b8c\u6210\u7a0b\u5e8f\uff0c\u5426\u5247\u5c07\u7121\u6cd5\u6b63\u78ba\u555f\u52d5\u60a8\u7684\u5e33\u6236\u3002
@@ -358,7 +359,7 @@ Value_Default=\u9810\u8a2d
 Value_ProgressComplete=\u5b8c\u6210
 Value_ProgressInProgress=\u9032\u884c\u4e2d
 Placeholder_Search=\u641c\u5c0b
-Instructions_ExportOrgChart1=\u6309\u4e00\u4e0b\u300c\u8f38\u51fa\u300d\u6309\u9215\u4ee5\u958b\u59cb\u4e0b\u8f09\u7d44\u7e54\u5716\u8cc7\u6599\u3002\u4e0b\u8f09\u5b8c\u6210\u5f8c\uff0c\u60a8\u53ef\u4ee5\u5c07\u8cc7\u6599\u8f38\u5165\u5230 Visio \u7b49\u7a0b\u5f0f\uff0c\u8b93\u8cc7\u6599\u53ef\u4ee5\u8f49\u70ba\u6240\u9700\u7684\u8f38\u51fa\u683c\u5f0f\u3002
+Instructions_ExportOrgChart1=\u6309\u4e00\u4e0b [\u532f\u51fa] \u6309\u9215\u4f86\u958b\u59cb\u4e0b\u8f09\u7d44\u7e54\u5716\u8cc7\u6599\u3002\u4e0b\u8f09\u5b8c\u6210\u5f8c\uff0c\u60a8\u5c31\u53ef\u4ee5\u4f7f\u7528\u8cc7\u6599\u5c07\u6b64\u7d44\u7e54\u5716\u8cc7\u6599\u532f\u5165\u9078\u64c7\u7684\u8a08\u756b\u4e2d\u3002\u8cc7\u6599\u6703\u4ee5 CSV \u683c\u5f0f\u532f\u51fa\u3002
 Instructions_ExportOrgChart2=\u8acb\u9078\u64c7\u8f38\u51fa\u5c64\u7d1a\u6df1\u5ea6\uff0c\u7136\u5f8c\u6309\u4e0b\u65b9\u7684\u300c\u8f38\u51fa\u300d\u6309\u9215\u3002
 Instructions_EmailTeam1=\u96fb\u5b50\u90f5\u4ef6\u6e05\u55ae\u662f\u6839\u64da\u6b64\u6642\u8d77\u59cb\u7684\u7d44\u7e54\u8cc7\u6599\u7522\u751f\u3002\u7576\u60a8\u6309\u4e00\u4e0b\u300c\u50b3\u9001\u96fb\u5b50\u90f5\u4ef6\u300d\u6309\u9215\u6642\uff0c\u9810\u8a2d\u7684\u96fb\u5b50\u90f5\u4ef6\u7a0b\u5f0f\u5c31\u6703\u81ea\u52d5\u958b\u555f\uff0c\u9644\u6709\u9810\u5148\u586b\u5165\u7684\u96fb\u5b50\u90f5\u4ef6\u5730\u5740\u6e05\u55ae\u3002
 Instructions_EmailTeam2=\u8acb\u9078\u64c7\u5718\u968a\u5c64\u7d1a\u6df1\u5ea6\uff0c\u7136\u5f8c\u6309\u4e0b\u65b9\u7684\u300c\u96fb\u5b50\u90f5\u4ef6\u300d\u6309\u9215\u3002
