--- a/server/src/main/resources/password/pwm/i18n/Error_ja.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_ja.properties
@@ -162,7 +162,7 @@ Error_PasswordOnlyBad=\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u9593\u9055\u3063\u30
 Error_RecoverySequenceIncomplete=\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5fd8\u308c\u305f\u5834\u5408\u306e\u30b7\u30fc\u30b1\u30f3\u30b9\u3067\u554f\u984c\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002\u3082\u3046\u4e00\u5ea6\u3084\u308a\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Error_FileTypeIncorrect=\u30d5\u30a1\u30a4\u30eb\u306e\u7a2e\u985e\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093\u3002
 Error_FileTooLarge=\u30d5\u30a1\u30a4\u30eb\u304c\u5927\u304d\u3059\u304e\u307e\u3059\u3002
-Error_NodeServiceError=\u30af\u30e9\u30b9\u30bf\u30b5\u30fc\u30d3\u30b9\u3067\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f: %1%\u3002\u8a73\u7d30\u306f\u3001\u30ed\u30b0\u30d5\u30a1\u30a4\u30eb\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Error_NodeServiceError=\u30ce\u30fc\u30c9\u30b5\u30fc\u30d3\u30b9\u3067\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f: %1%\u3002\u8a73\u7d30\u306f\u3001\u30ed\u30b0\u30d5\u30a1\u30a4\u30eb\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Error_RemoteErrorValue=\u30ea\u30e2\u30fc\u30c8\u30a8\u30e9\u30fc: %1%
 Error_WordlistImportError=\u30ef\u30fc\u30c9\u30ea\u30b9\u30c8\u3092\u30a4\u30f3\u30dd\u30fc\u30c8\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f: %1%
 Error_PwNotifyServiceError=\u30d1\u30b9\u30ef\u30fc\u30c9\u901a\u77e5\u30b5\u30fc\u30d3\u30b9\u3092\u5b9f\u884c\u4e2d\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f: %1%
