--- a/server/src/main/resources/password/pwm/i18n/Message_ja.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_ja.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=\u5927\u6587\u5b57\u306e\u6700\u5c0f\u6587\u5b57\u6570
 Rule_MaximumUpperCase=\u5927\u6587\u5b57\u306e\u6700\u5927\u6587\u5b57\u6570
 Rule_MinimumLowerCase=\u5c0f\u6587\u5b57\u306e\u6700\u5c0f\u6587\u5b57\u6570
 Rule_MaximumLowerCase=\u5c0f\u6587\u5b57\u306e\u6700\u5927\u6587\u5b57\u6570
+Rule_AllowNonAlpha=\u975e\u30a2\u30eb\u30d5\u30a1\u30d9\u30c3\u30c8\u3092\u8a31\u53ef
 Rule_AllowNumeric=\u6570\u5b57\u3092\u8a31\u53ef
 Rule_MinimumNumeric=\u6570\u5b57\u306e\u6700\u5c0f\u6587\u5b57\u6570
 Rule_MaximumNumeric=\u6570\u5b57\u306e\u6700\u5927\u6587\u5b57\u6570
