--- a/server/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=M\u00ednimo de Letras Mai\u00fasculas
 Rule_MaximumUpperCase=M\u00e1ximo de Letras Mai\u00fasculas
 Rule_MinimumLowerCase=M\u00ednimo de Letras Min\u00fasculas
 Rule_MaximumLowerCase=M\u00e1ximo de Letras Min\u00fasculas
+Rule_AllowNonAlpha=Permitir N\u00e3o Alfab\u00e9ticos
 Rule_AllowNumeric=Permitir Num\u00e9ricos
 Rule_MinimumNumeric=M\u00ednimo de Num\u00e9ricos
 Rule_MaximumNumeric=M\u00e1ximo de Num\u00e9ricos
