--- a/server/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=\u5927\u5beb\u5b57\u5143\u4e0b\u9650
 Rule_MaximumUpperCase=\u5927\u5beb\u5b57\u5143\u4e0a\u9650
 Rule_MinimumLowerCase=\u5c0f\u5beb\u5b57\u5143\u4e0b\u9650
 Rule_MaximumLowerCase=\u5c0f\u5beb\u5b57\u5143\u4e0a\u9650
+Rule_AllowNonAlpha=\u5141\u8a31\u975e Alpha
 Rule_AllowNumeric=\u5141\u8a31\u6578\u503c\u5b57\u5143
 Rule_MinimumNumeric=\u6578\u503c\u5b57\u5143\u4e0b\u9650
 Rule_MaximumNumeric=\u6578\u503c\u5b57\u5143\u4e0a\u9650
