peoplesearch photo user permissions fix and enable photo setting

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -300,7 +300,7 @@ Long_Title_Main_Menu=Password self-service main menu. From here you can change y
 Long_Title_NewUser=Create a new user account.
 Long_Title_PeopleSearch=Lookup contact information for your colleagues.
 Long_Title_SetupResponses=Security questions and answers allow you to recover a forgotten password.
-Long_Title_SetupOtpSecret=Setup mobile app device.  If you forget your password, you can use your mobile device to authenticate to this site.
+Long_Title_SetupOtpSecret=Setup your mobile device to allow you to recover a forgotten password.
 Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UpdateProfile=Update your user profile data.
 Long_Title_UserEventHistory=Password event history.  See when you have changed your password in the past.
