--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -590,6 +590,7 @@ Setting_Description_peopleSearch.displayName.user=Specify the display name for u
 Setting_Description_peopleSearch.enable=Enable this option to enable the People Search module.
 Setting_Description_peopleSearch.enableExport=Enable this option to allow download of organizational chart data.
 Setting_Description_peopleSearch.enableTeamMailto=Enable this option to allow to show a link that will email a team of users in the orgchart view.
+Setting_Description_peopleSearch.enablePhoto=Enable this option to show photos of people in the organizational chart and detail used view. 
 Setting_Description_peopleSearch.enableOrgChart=Enable this option to show an organizational chart of users.
 Setting_Description_peopleSearch.enablePublic=Enable this option to allow access to the People Search module for unauthenticated users.
 Setting_Description_peopleSearch.enablePrinting=Enable this option to show a print option in the org chart view.
@@ -1110,6 +1111,7 @@ Setting_Label_peopleSearch.displayName.user=UserDN Name Display
 Setting_Label_peopleSearch.enable=Enable People Search
 Setting_Label_peopleSearch.enableExport=Enable Export
 Setting_Label_peopleSearch.enableTeamMailto=Enable Team Mailto
+Setting_Label_peopleSearch.enablePhoto=Enable Photos
 Setting_Label_peopleSearch.enableOrgChart=Enable Organizational Chart
 Setting_Label_peopleSearch.enablePublic=Enable People Search Public (Non-Authenticated) Access
 Setting_Label_peopleSearch.enablePrinting=Enable Printing
