Fixed a problem where the advanced search for people search and help desk wasn't working in IE11.

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -40,6 +40,7 @@
   "Display_Random": "Random",
   "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
   "Display_SearchResultsNone": "No results",
+  "Display_SearchAttrsUnique": "Search attributes must be unique",
   "Display_SelectAttribute": "Select attribute...",
   "Display_SetRandomPasswordPrompt": "Set a new random password for this user?",
   "Display_StrengthMeter": "Password Strength",
