--- a/server/src/main/resources/password/pwm/i18n/Message_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_fi.properties
@@ -73,6 +73,7 @@ Requirement_OldCharPlural=Ei saa sis\u00e4lt\u00e4\u00e4 enemp\u00e4\u00e4 kuin 
 Requirement_RequiredChars=Pit\u00e4\u00e4 sis\u00e4lt\u00e4\u00e4 v\u00e4hint\u00e4\u00e4n yhden seuraavista merkeist\u00e4:
 Requirement_UniqueRequired=Uutta salasanaa ei todenn\u00e4k\u00f6isesti ole k\u00e4ytetty aikaisemmin.
 Requirement_WordList=Ei saa sis\u00e4lt\u00e4\u00e4 yleisi\u00e4 sanoja eik\u00e4 kirjainyhdistelmi\u00e4.
+Display_RecoverTokenSuccess=Kiitos!  Suojakoodi joka l\u00e4hettiin <b>%1%</b> on vahvistettu.
 Success_ActivateUser=K\u00e4ytt\u00e4j\u00e4tunnuksesi on aktivoitu. Jatka eteenp\u00e4in, jotta voit k\u00e4ytt\u00e4\u00e4 uutta tunnustasi.
 Success_ConfigFileUpload=Konfiguraation tiedosto on onnistuneesti siirretty.
 Success_CreateGuest=Uusi vieras k\u00e4ytt\u00e4j\u00e4tunnus on luotu. K\u00e4ytt\u00e4j\u00e4\u00e4 tiedotetaan mik\u00e4li s\u00e4hk\u00f6postiosoite on sy\u00f6tetty. Tunnus saattaa viel\u00e4 my\u00f6s vaatia aktivoinnin.
