Locale update Display_fi.properties

--- a/server/src/main/resources/password/pwm/i18n/Display_fi.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_fi.properties
@@ -30,6 +30,7 @@ Button_CloseWindow=Sulje ikkuna
 Button_ConfirmResponses=Vahvista vastaukset
 Button_Continue=Jatka
 Button_Create=Luo
+Button_GoBack=Paluu
 Button_Hide=Piilota salasanat
 Button_Hide_Responses=Piilota vastaukset
 Button_Login=Kirjaudu
@@ -134,6 +135,7 @@ Long_Title_UserInformation=Tietoja salasanasta ja salasanapolitiikasta.
 Title_LogoutPublic=Aikakatkaisu
 Title_ActivateUser=Aktivoi k\u00e4ytt\u00e4j\u00e4
 Title_Admin=Admin
+Title_Application=Salasana Itsepalvelu
 Title_Captcha=Vahvistus
 Title_ChangePassword=Vaihda salasana
 Title_ConfirmResponses=Vahvista vastaukset
